--- a/.gitconfig
+++ b/.gitconfig
@@ -8,4 +8,4 @@
 [user]
 	name = Robert Boloc
 [alias]
-    lg = git log --decorate --graph --oneline --abrev-commit
+    lg = log --decorate --graph --oneline
