--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,3 +11,8 @@ set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-option -g mouse-resize-pane on
 setw -g mode-mouse on
+
+# bump history limit to 10000
+set -g history-limit 10000
+
+set -g default-terminal "screen-256color"
