--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,12 @@
 [color]
-	status = auto
-	branch = auto
-	diff = auto
-	grep = auto
-	interactive = auto
-	ui = auto
+    status = auto
+    branch = auto
+    diff = auto
+    grep = auto
+    interactive = auto
+    ui = auto
 [user]
-	name = Robert Boloc
+    name = Robert Boloc
+    email = robertboloc@gmail.com
 [alias]
     lg = log --decorate --graph --oneline
