--- a/.gitconfig
+++ b/.gitconfig
@@ -10,3 +10,6 @@
     email = robertboloc@gmail.com
 [alias]
     lg = log --decorate --graph --oneline
+    snapshot = !git stash save "[Snapshot of $(date)]" && git stash apply "stash@{0}"
+[diff]
+    algorithm = patience
